# dicom-rtstruct

./: .gitignore  README.md  pyproject.toml
dicom_rtstruct/: __init__.py  dicom.py  rtstruct.py  version.py
tests/: test_rtstruct.py
